--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -25,4 +25,16 @@
     <string name="thermal_dialer">Dialer</string>
     <string name="thermal_gaming">Gaming</string>
     <string name="thermal_streaming">Streaming</string>
+
+    <!-- Xiaomi Stylus -->
+    <string name="stylus_title">Xiaomi Stylus</string>
+    <string name="stylus_summary">Xiaomi Stylus Settings</string>
+    <string name="stylus_switch_title">Enable Xiaomi Stylus</string>
+    <string name="stylus_switch_summary">Enable this settings to use Xiaomi stylus</string>
+
+    <!-- Xiaomi Keyboard -->
+    <string name="keyboard_title">Xiaomi Keyboard</string>
+    <string name="keyboard_summary">Xiaomi Keyboard Settings</string>
+    <string name="keyboard_switch_title">Enable Xiaomi Keyboard</string>
+    <string name="keyboard_switch_summary">Enable this settings to use Xiaomi Keyboard</string>
 </resources>
